[package]
name = "raikan"
version = "0.2.0"
edition = "2024"
description = "Hanabi bot using Hyphenated rules for hanab.io"
readme = "README.md"
repository = "https://github.com/mswart/raikan"
license = "GNU AGPLv3"
keywords = ["hanabi", "hyphenated", "bot"]
categories = ["games", "simulations"]
include = ["/src", "/tests", "LICENSE"]

[dependencies]
colored = "2.2.0"
rand = "0.8.5"
rand_pcg = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
websocket = { version = "0.27.1", optional = true }
reqwest = { version = "0.12.23", features = [
    "blocking",
    "json",
], optional = true }
slog = "2.7.0"
slog-term = "2.9.2"

[[bin]]
name = "raikan-web"
test = false
bench = false
required-features = ["webclient"]

[profile.release]
debug = true

[features]
webclient = ["dep:websocket", "dep:reqwest"]
