[package]
name = "raikan"
version = "0.2.0"
edition = "2024"
description = "Hanabi bot using Hyphenated rules for hanab.io"
readme = "README.md"
repository = "https://github.com/mswart/raikan"
license = "AGPL-3.0-or-later"
keywords = ["hanabi", "hyphenated", "bot"]
categories = ["games", "simulation"]
include = ["/src", "/tests", "LICENSE"]

[dependencies]
colored = "2.2.0"
rand = "0.8.5"
rand_pcg = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12.23", features = [
    "blocking",
    "json",
    "rustls-tls",
], optional = true, default-features = false }
slog = "2.7.0"
slog-term = "2.9.2"
tungstenite = { version = "0.28.0", optional = true, features = [
    "rustls-tls-webpki-roots",
] }

[[bin]]
name = "raikan-web"
test = false
bench = false
required-features = ["webclient"]

[profile.release]
debug = true

[features]
webclient = ["dep:tungstenite", "dep:reqwest"]
