[package]
name = "raikan"
version = "0.2.2"
edition = "2024"
description = "Hanabi bot using Hyphenated rules for hanab.io"
readme = "README.md"
repository = "https://github.com/mswart/raikan"
license = "AGPL-3.0-or-later"
keywords = ["hanabi", "hyphenated", "bot"]
categories = ["games", "simulation"]
include = ["/src", "/tests", "LICENSE"]
# be explicit about MSRV, but use first version with edition 2024 for now:
rust-version = "1.85"

[dependencies]
colored = "3.0.0"
rand = "0.8.5"
rand_pcg = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.13.0", features = [
    "blocking",
    "json",
    "rustls-tls",
], optional = true, default-features = false }
slog = "2.7.0"
slog-term = "2.9.2"
tungstenite = { version = "0.28.0", optional = true, features = [
    "rustls-tls-webpki-roots",
] }

[[bin]]
name = "raikan-web"
test = false
bench = false
required-features = ["webclient"]

[profile.release]
debug = true

[features]
webclient = ["dep:tungstenite", "dep:reqwest"]
